fixing blank image of X-TF-IDF project

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
         <div class="projects__content">
           <div class="projects__row">
-            <div class="projects__row-img-cont">
+            <!-- <div class="projects__row-img-cont">
               <img
                 src="./assets/jpeg/notebook-mockup-example.jpeg"
                 alt="Software Screenshot"
@@ -315,7 +315,7 @@
                 loading="lazy"
                 loading="lazy"
               />
-            </div>
+            </div> -->
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">X-TF-IDF</h3>
               <p class="projects__row-content-desc">
