Changing mail and linkedin contacts

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="home-hero__socials">
         <div class="home-hero__social">
           <a
-            href="https://www.linkedin.com/in/viniaoliver/"
+            href="https://www.linkedin.com/in/vinicius-a-dev/"
             class="home-hero__social-icon-link"
             target="_blank"
             rel="noopener noreferrer"
@@ -221,7 +221,7 @@
               </h3>
               <div class="contact-cards">
                 <a
-                  href="mailto:jvinicius.alves000@gmail.com"
+                  href="mailto:viniciusa.dev@gmail.com"
                   class="contact-card email"
                   title="E-mail"
                 >
@@ -237,7 +237,7 @@
                   <span>Instagram</span>
                 </a>
                 <a
-                  href="https://www.linkedin.com/in/viniaoliver/"
+                  href="https://www.linkedin.com/in/vinicius-a-dev/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="contact-card linkedin"
@@ -388,7 +388,7 @@
               <a
                 target="_blank"
                 rel="noopener noreferrer"
-                href="https://www.linkedin.com/in/viniaoliver/"
+                href="https://www.linkedin.com/in/vinicius-a-dev/"
               >
                 <img
                   class="main-footer__icon"
