--- a/x-tf-idf.html
+++ b/x-tf-idf.html
@@ -114,7 +114,7 @@
               <a
                 target="_blank"
                 rel="noopener noreferrer"
-                href="https://www.linkedin.com/in/viniaoliver/"
+                href="https://www.linkedin.com/in/vinicius-a-dev/"
               >
                 <img
                   class="main-footer__icon"
